
add_subdirectory(ContextMenu)
add_subdirectory(Docking)
add_subdirectory(Tree)
add_subdirectory(Drag)
add_subdirectory(Viewport)
add_subdirectory(Input)
add_subdirectory(Popups)

EDITOR_ADD(
    ClickableLabel.cs
    ColumnDefinition.cs
    MainMenu.h
    MainMenu.cpp
    MainMenu.cs
    MainMenuButton.h
    MainMenuButton.cpp
    ToolStripButton.h
    ToolStripButton.cpp
    ToolStrip.h
    ToolStrip.cpp
    ToolStripSeparator.h
    ToolStripSeparator.cpp
    StatusBar.h
    StatusBar.cpp
    StatusBar.cs
    ComboBox.h
    ComboBox.cpp
    ComboBox.cs
    EnumComboBox.cs
    GuiGeometry.cs
    HeadlessEditorPresentationHost.cs
    IEditorPresentationHost.cs
    NativeGuiPresentationHost.cs
    NavigationBar.h
    NavigationBar.cpp
    NavigationBar.cs
    NavigationButton.h
    NavigationButton.cpp
    Row.cs
    Table.cs
    ToolStrip.cs
)
