
add_subdirectory(Cameras)

EDITOR_ADD(
    EditorViewport.h
    EditorViewport.cpp
    EditorGizmoViewport.h
    EditorGizmoViewport.cpp
    MainEditorGizmoViewport.h
    MainEditorGizmoViewport.cpp

    Widgets/ViewportWidgetButton.h
    Widgets/ViewportWidgetButton.cpp
    Widgets/ViewportWidgetsContainer.h
    Widgets/ViewportWidgetsContainer.cpp
)